2012-09-07  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #13679]
	* debug/Makefile (LDFLAGS-tst-cancel24): Renamed to ...
	(LDLIBS-tst-cancel24): This.

2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14545]
	* Makefile (tests-static): Add tst-cancel21-static.
	(tests): Likewise.
	* tst-cancel21-static.c: New file.

2012-09-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/pthread_getcpuclockid.c
	[!__ASSUME_POSIX_CPU_TIMERS]: Remove conditional code.
	[__NR_clock_getres]: Make code unconditional.
	(pthread_getcpuclockid): Remove code left unreachable by removal
	of conditionals.

2012-08-31  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14532]
	* sysdeps/unix/sysv/linux/sem_post.c (__new_sem_post): Use
	atomic_compare_and_exchange_bool_rel.
	* tst-sem14.c: New file.
	* Makefile (tests): Add tst-sem14.

2012-08-15  Roland McGrath  <roland@hack.frob.com>

	* Makefile (CFLAGS-flockfile.c): Use $(libio-mtsafe) instead
	of -D_IO_MTSAFE_IO.
	(CFLAGS-ftrylockfile.c, CFLAGS-funlockfile.c): Likewise.
	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-fork.c): Likewise.

2012-08-16  Joseph Myers  <joseph@codesourcery.com>

	* pthread_cond_timedwait.c (__pthread_cond_timedwait)
	[!__ASSUME_POSIX_TIMERS]: Remove conditional code.
	* pthread_condattr_setclock.c (pthread_condattr_setclock)
	[!__ASSUME_POSIX_TIMERS]: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S
	(__pthread_cond_timedwait) [!__ASSUME_POSIX_TIMERS]: Likewise.
	* sysdeps/unix/sysv/linux/pthread_getcpuclockid.c
	[!__ASSUME_POSIX_TIMERS]: Likewise.
	* sysdeps/unix/sysv/linux/sh/pthread_cond_timedwait.S
	(__pthread_cond_timedwait) [!__ASSUME_POSIX_TIMERS]: Likewise.
	* sysdeps/unix/sysv/linux/timer_create.c [__NR_timer_create]: Make
	code unconditional.
	[!__NR-timer_create]: Remove conditional code.
	(timer_create) [!__ASSUME_POSIX_TIMERS]: Likewise.
	* sysdeps/unix/sysv/linux/timer_delete.c [__NR_timer_delete]: Make
	code unconditional.